# football-kick-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  research.md
.github/workflows/: ci.yml
ball/: config.py  cvat.py  inference.py  preannotate.py
docs/: RESEARCH.md
notebooks/: 2D_pose_model_comparison.ipynb  YOLO_candidate_comparison.ipynb  YOLO_pose_shooting_drills.ipynb
notebooks/ball/: ball_detector_baseline_shooting_drills.ipynb
notebooks/pose/: 2D_pose_model_comparison.ipynb  YOLO_candidate_comparison.ipynb  YOLO_pose_shooting_drills.ipynb
notebooks/tools/: preannotate_ball_script.ipynb  preannotate_pose_script.ipynb
pose/: annotate.py  config.py  constants.py  cvat.py  inference.py  preannotate.py  visualise.py
tests/: test_visualise.py
tests/ball/: test_ball_cvat.py  test_ball_inference.py  test_ball_preannotation.py
tests/pose/: test_inference.py  test_pose_annotate.py  test_pose_cvat.py  test_pose_inference.py  test_pose_preannotate.py
tests/utils/: test_io.py  test_metrics.py  test_utils_io.py  test_utils_video.py  test_utils_yolo.py
tools/: preannotate_ball.py  preannotate_pose.py
utils/: config.py  io.py  metrics.py  video.py  yolo.py
