[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "football-kick-tracker"
version = "0.1.0"
requires-python = ">=3.10"
# Keep in sync with requirements.txt
dependencies = [
    "ultralytics",
    "opencv-python",
    "numpy",
    "matplotlib",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pose*", "utils*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
allowed_prefixes = ["experiment"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: style, F: errors, I: imports

[tool.pytest.ini_options]
testpaths = ["tests"]
